--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,76 @@
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .link-underline {
+        list-style: none;
+        display: inline-block;
+        padding-bottom:1px;
+        background: linear-gradient(#ddd, #ddd) center bottom;
+        background-size: 0% 0px;
+        background-repeat:no-repeat;
+        transition: all 0.3s;
+        border-radius: 2%;
+	}
+
+	.link-underline:hover {
+		background-size: 100% 2px;
+	}
+
+    .shine
+    {
+    background-image: linear-gradient(
+        to right,
+        #ccc 30%,
+        #fff 60%,
+        #bbb 90%
+    );
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 3s linear infinite;
+    }
+
+    @keyframes textclip {
+    to {
+        background-position: 200% center;
+    }
+    }
+
+    .modal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 20; /* Sit on top */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+      }
+}
+
+::-webkit-scrollbar {
+    width: 15px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #000;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: linear-gradient(to top, #000, #666, #000);
+    border: 3px solid #000;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(to top, #000, #aaa, #000);;
+  }
